<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/nota"
                android:text="@string/nameApp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#FFEB3B"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1">

            </TextView>
            <ImageButton
                android:id="@+id/goPiano"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button"
                android:src="@drawable/piano_icono"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/solicitud"
                android:layout_marginLeft="20dp">
            </ImageView>
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/solicitud"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginRight="20dp"/>
        </LinearLayout>


        <EditText
            android:id="@+id/entrada"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/teal_200"
            android:hint="@string/prompt_solicitud"/>

        <Button
            android:id="@+id/enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/send1"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black">
            <TextView
                android:id="@+id/respuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFEB3B"
                android:textColorHint="#FFEB3B"
                android:hint="@string/title2"
                android:layout_margin="10dp"
                />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>