<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    tools:context=".Piano">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5">
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/grabar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button"
                        android:src="@drawable/grabar_icono"/>

                    <ImageButton
                        android:id="@+id/parar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button"
                        android:src="@drawable/detener_icono"
                        android:layout_marginLeft="10dp" />

                    <ImageButton
                        android:id="@+id/reproducir"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/custom_button"
                        android:src="@drawable/enviar_icono"
                        android:layout_marginLeft="10dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:text="@string/canal"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:gravity="center_vertical"/>

                        <EditText
                            android:id="@+id/canal"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:width="45dp"
                            android:backgroundTint="#FFFFFF"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical"
                            android:text="@string/pista"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/pista"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:width="200dp"
                            android:backgroundTint="#FFFFFF"
                            android:gravity="center_vertical"
                            android:textColor="@color/white"
                            android:textColorHint="#FDFDFD" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/octava"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_weight="0.5"/>

                        <Spinner
                            android:id="@+id/octava"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:backgroundTint="#CDDC39"
                            android:prompt="@string/octava"
                            android:spinnerMode="dropdown"
                            android:layout_weight="0.5"
                            />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.5">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/regresar"
                    android:textColor="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:textAlignment="center"/>

                <ImageButton
                    android:id="@+id/regresar"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/custom_button"
                    android:src="@drawable/regresar_icono" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal">
                <View
                    android:id="@+id/d1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"/>
                <View
                    android:id="@+id/d2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"/>
                <View
                    android:id="@+id/d3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"/>
                <View
                    android:id="@+id/d4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"/>
                <View
                    android:id="@+id/d5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"/>
                <View
                    android:id="@+id/d6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"/>
                <View
                    android:id="@+id/d7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/white"/>
            </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5">
                <View
                    android:id="@+id/t1"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorPrimaryDark2"/>
                <View
                    android:id="@+id/t2"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginRight="70dp"
                    android:background="@color/colorPrimaryDark2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <View
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/colorPrimaryDark2"/>
                <View
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="35dp"
                    android:background="@color/colorPrimaryDark2"/>
                <View
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/colorPrimaryDark2"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>